# cinereserve-backend

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
accounts/: serializers.py  tests.py  urls.py  views.py
bookings/: serializers.py  services.py  tests.py  urls.py  views.py
catalog/: serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
core/: models.py
core/domain_models/: __init__.py  accounts.py  bookings.py  catalog.py  cinemas.py  payments.py  showtimes.py
core/migrations/: 0001_initial.py
showtimes/: serializers.py  tests.py  urls.py  views.py
tickets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
